# ChangeLog for media-gfx/qtpfsgui
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/qtpfsgui/Attic/ChangeLog,v 1.8 2008/08/11 04:39:42 maekke Exp $

  11 Aug 2008; Markus Meier <maekke@gentoo.org> qtpfsgui-1.9.2-r1.ebuild:
  do not install html documentation twice and add support for LINGUAS, bug
  #231599

*qtpfsgui-1.9.2-r1 (04 Jul 2008)

  04 Jul 2008; Markus Meier <maekke@gentoo.org>
  +files/qtpfsgui-1.9.2-trunk.patch, -qtpfsgui-1.9.2.ebuild,
  +qtpfsgui-1.9.2-r1.ebuild:
  revision bump for bug #222135; remove broken version

*qtpfsgui-1.9.2 (02 May 2008)

  02 May 2008; Markus Meier <maekke@gentoo.org> -qtpfsgui-1.9.0.ebuild,
  -qtpfsgui-1.9.1.ebuild, qtpfsgui-1.9.1-r1.ebuild, +qtpfsgui-1.9.2.ebuild:
  bump to 1.9.2; 1.9.1-r1 stable on amd64/x86; remove old

*qtpfsgui-1.9.1-r1 (12 Apr 2008)

  12 Apr 2008; Markus Meier <maekke@gentoo.org> +qtpfsgui-1.9.1-r1.ebuild:
  add support for split qt4 ebuilds, thanks zlin for the help (bug #217172)

  16 Mar 2008; Markus Meier <maekke@gentoo.org> qtpfsgui-1.9.1.ebuild:
  add ~amd64

*qtpfsgui-1.9.1 (03 Mar 2008)

  03 Mar 2008; Markus Meier <maekke@gentoo.org> +qtpfsgui-1.9.1.ebuild:
  version bump

  09 Feb 2008; Markus Meier <maekke@gentoo.org> qtpfsgui-1.9.0.ebuild:
  x86 stable

*qtpfsgui-1.9.0 (17 Dec 2007)

  17 Dec 2007; Markus Meier <maekke@gentoo.org> +metadata.xml,
  +qtpfsgui-1.9.0.ebuild:
  initial import of qtpfsgui, bug #179887 (and bug #162080)
